# insurance-claims-fraud-detection

./: .gitignore  .yamllint.yml  CLAUDE.md  Dockerfile  Makefile  PROGRESS.md  README.md  docker-compose.yml  example_usage.py  fraud_detection_demo.py  main.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  tox.ini
.claude/agents/: enterprise-architect.md  github-workflow.md  software-developer.md  software-testing-manager.md
.github/workflows/: cd.yml  ci.yml
data/: README.md  dataset_summary.json
data/fraudulent_claims/: kickback_schemes.json  phantom_billing.json  phantom_billing_expanded.json  prescription_fraud.json  provider_network_analysis.json  staged_accidents.json  unbundling_fraud.json  upcoding_fraud.json  upcoding_fraud_expanded.json
data/raw/: mixed_claims.json
data/valid_claims/: medical_claims.json  medical_claims_expanded.json  no_fault_claims.json  pharmacy_claims.json
deployment/kubernetes/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  rbac.yaml  secrets.yaml  service.yaml
deployment/terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
docs/: BENCHMARK_TARGETS.md  CONFIDENCE_SCORING_ALGORITHM.md  CONFIDENCE_SCORING_DETAILED.md  DATA_FLOW_ARCHITECTURE.md  DATA_GOVERNANCE.md  DATA_VALIDATION_PIPELINE.md  DEPLOYMENT_OPTIONS.md  ENRICHMENT_ENGINE_GUIDE.md  ENRICHMENT_QUICK_REFERENCE.md  FRAUD_COVERAGE_MATRIX.md  FRAUD_DETECTION_BASELINE_AUDIT.md  FRAUD_PATTERN_TEST_CASES.md  GAPS_AND_IMPROVEMENTS.md  INFRASTRUCTURE_REQUIREMENTS.md  INTEGRATION_POINTS.md  MEDICAL-CODING-IMPLEMENTATION-GUIDE.md  MEDICAL-CODING-REFERENCE.md  MEDICAL-CODING-STANDARDS-RESEARCH.md  MEDICAL_CODING_INTEGRATION_PLAN.md  PHASE_2B_IMPLEMENTATION_SUMMARY.md  PHASE_2C_IMPLEMENTATION_SUMMARY.md  PYDANTIC-V2-REFERENCE.md  RAG_ARCHITECTURE_DESIGN.md  README-MEDICAL-CODING.md  RETRIEVAL_PATTERNS.md  VECTOR_EMBEDDING_STRATEGY.md  VECTOR_STORE_DESIGN.md
docs/archive/session-2025-10-28/: DATA_ENHANCEMENT_REPORT.md  PHASE_2A_DELIVERY_SUMMARY.md
docs/rag/: KB_IMPLEMENTATION_GUIDE.md  KB_IMPLEMENTATION_STATUS.md  README.md
monitoring/: prometheus.yml
resources/api-specs/: claims-api.yaml  fraud-detection-api.yaml
resources/architecture/: data-architecture.md  genai-architecture.md  ml-architecture.md  prompt-engineering-framework.md  rag-architecture.md  security-architecture.md  system-architecture.md
resources/data-models/: fraud-detection-data-model.md
scripts/: build_knowledge_bases.py
src/: __init__.py
src/detection/: __init__.py  anomaly_detector.py  feature_engineering.py  fraud_detector.py  ml_models.py  rule_engine.py
src/ingestion/: __init__.py  data_loader.py  preprocessor.py  validator.py
src/rag/: confidence_scoring.py  enricher.py  enrichment_cache.py  enrichment_metrics.py  fraud_signal_generator.py  missing_data_analyzer.py  schemas.py
src/training/: __init__.py  train_models.py
tests/: FRAUD_DETECTION_TEST_STRATEGY.md  RAG_TEST_STRATEGY.md  TDD_TEST_PLAN.md  TEST_PLAN.md  TEST_STRATEGY_SUMMARY.md  __init__.py  test_config.py  test_models.py
tests/fixtures/: TEST_FIXTURES_SCHEMA.py  __init__.py  claim_factories.py  mock_objects.py
tests/fraud_patterns/: test_upcoding_detection.py
tests/integration/: __init__.py  test_data_ingestion_pipeline.py  test_fraud_detection_pipeline.py
tests/performance/: __init__.py  test_latency.py  test_throughput.py
tests/rag/: __init__.py  test_patient_kb.py
tests/unit/: __init__.py  test_data_loader.py  test_feature_engineering.py  test_ml_models.py  test_preprocessor.py  test_rule_engine.py  test_validator.py
(+10 files in other folders)
