[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "insurance-claims-pipeline"
version = "1.0.0"
description = "Production-ready data ingestion pipeline for insurance fraud detection"
authors = [
    {name = "Insurance Claims Analysis Team", email = "team@insurance-claims.com"}
]
readme = "CLAUDE.md"
license = {file = "LICENSE"}
keywords = ["insurance", "fraud detection", "data ingestion", "healthcare", "claims processing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
dependencies = [
    "pydantic>=1.10.0,<3.0.0",
    "pandas>=1.5.0,<3.0.0",
    "numpy>=1.21.0,<2.0.0",
    "jsonschema>=4.0.0,<5.0.0",
    "scikit-learn>=1.2.0,<2.0.0",
    "aiofiles>=0.8.0,<1.0.0",
    "python-dateutil>=2.8.0,<3.0.0",
    "structlog>=22.0.0,<24.0.0",
    "click>=8.0.0,<9.0.0",
    "rich>=12.0.0,<14.0.0",
    "tqdm>=4.60.0,<5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0,<8.0.0",
    "pytest-asyncio>=0.20.0,<1.0.0",
    "pytest-cov>=4.0.0,<5.0.0",
    "black>=22.0.0,<24.0.0",
    "isort>=5.10.0,<6.0.0",
    "mypy>=1.0.0,<2.0.0",
    "flake8>=5.0.0,<7.0.0",
]
performance = [
    "pyarrow>=10.0.0,<16.0.0",
    "fastparquet>=0.8.0,<1.0.0",
]
monitoring = [
    "memory-profiler>=0.60.0,<1.0.0",
    "psutil>=5.8.0,<6.0.0",
]

[project.scripts]
claims-pipeline = "main:cli"

[project.urls]
Homepage = "https://github.com/insurance-claims/data-pipeline"
Documentation = "https://insurance-claims-pipeline.readthedocs.io/"
Repository = "https://github.com/insurance-claims/data-pipeline"
"Bug Tracker" = "https://github.com/insurance-claims/data-pipeline/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
src = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
known_first_party = ["src"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "pandas.*",
    "numpy.*",
    "sklearn.*",
    "aiofiles.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]